--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,6 @@
 AddDefaultCharset UTF-8
+AddOutputFilterByType DEFLATE text/text text/html text/plain text/xml text/css application/x-javascript application/javascript
+Header set Cache-Control "public"
 
 RewriteEngine on
 RewriteRule ^$ http://www.pling.org.uk/journal/2013/manchester-tech-nights/ [R=302,L]
